--- a/front/app/index.html
+++ b/front/app/index.html
@@ -25,7 +25,7 @@
                     <a href="create_table.html"><li>Создать новую таблицу клиентов </li></a>
                     <a href="new_mailing.html"><li>Новая рассылка  </li></a>
                     <a href=""> <li>Настройки</li></a>
-                    <a href=""><li>Элемент меню</li></a>
+                    <a href="FAQ.html"><li>FAQ</li></a>
             </ul>
         </nav>
         <!-- End navigation -->
